# mkanki

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  mkanki.rs
test_assets/: config.toml  test.md
