[package]
name = "mkanki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = "4.5.1"
genanki-rs = "0.4.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.16"
regex = "1.10.3"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
toml = "0.8.10"
